--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,7 @@ language: sv
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Svensk litteraturhistoria
 url: http://www.gutenberg.org/ebooks/49801
